<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/layout"
    android:background="@drawable/contact_dialog"
    android:layout_height="300dp">

    <RadioGroup
        android:id="@+id/gr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rad1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/d5"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:text="06292 6292" />

        <RadioButton
            android:id="@+id/rad2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d5"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_weight="1"
            android:text="03883 3883" />
    </RadioGroup>
    <Button
        android:id="@+id/btnDial"
        android:layout_width="@dimen/d100"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/gr"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/dial"
        android:background="@drawable/dial"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@id/gr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.25"/>
    <Button
        android:id="@+id/btnCall"
        android:layout_width="@dimen/d100"
        android:layout_height="wrap_content"
        android:text="@string/call_noew"
        android:textAllCaps="false"
        android:background="@drawable/call"
        app:layout_constraintBaseline_toBaselineOf="@id/btnDial"
        app:layout_constraintStart_toEndOf="@id/btnDial"
        app:layout_constraintEnd_toEndOf="@id/gr"
        app:layout_constraintHorizontal_bias="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/gr"
        app:layout_constraintStart_toStartOf="@id/gr"
        android:text="@string/choose_number"
        app:layout_constraintVertical_bias="0.5"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        />
</android.support.constraint.ConstraintLayout>