<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/btnDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLoginMatKhau"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:background="@drawable/custombutton"
        android:onClick="XuLyDangNhap"
        android:text="@string/form_login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_xxlarge"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/txtLoginTenDN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignStart="@+id/txtLoginMatKhau"
        android:layout_alignLeft="@+id/txtLoginMatKhau"
        android:layout_alignEnd="@+id/txtLoginMatKhau"
        android:layout_alignRight="@+id/txtLoginMatKhau"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="Tên đăng nhập"
        android:inputType="textPersonName"
        android:textSize="@dimen/font_xlarge" />

    <EditText
        android:id="@+id/txtLoginMatKhau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLoginTenDN"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="Mật khẩu"
        android:inputType="textPassword"
        android:textSize="@dimen/font_xlarge" />

    <!-- Layout "Hoặc" -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDangNhap"
        android:layout_alignStart="@+id/btnDangNhap"
        android:layout_alignLeft="@+id/btnDangNhap"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="2"
            android:background="@color/colorGray" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Hoặc"
            android:textSize="@dimen/font_large" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="2"
            android:background="@color/colorGray" />
    </LinearLayout>

    <Button
        android:id="@+id/btnDangKi"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custombutton1"
        android:onClick="XuLyDangKy"
        android:text="@string/form_register"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_large" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDangKi"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/label_forgotpass"
        android:textColor="@color/colorOrange"
        android:textSize="@dimen/font_large" />

</RelativeLayout>